# umd-handle-django

./: .gitignore  Dockerfile  README.md  env_example  pyproject.toml
docs/: DevelopmentEnvironmentLocal.md  umd-handle-open-api-v1.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-application-migration-to-django.md  0003-use-of-integer-suffix-for-handles.md  0004-custom-health-check-endpoint.md
src/: manage.py
src/umd_handle/: asgi.py  health_check.py  middleware.py  settings.py  urls.py  wsgi.py
src/umd_handle/api/: admin.py  models.py  tokens.py  urls.py  views.py
src/umd_handle/api/management/commands/: jwt_create_token.py  jwt_list_tokens.py
src/umd_handle/api/migrations/: 0002_jwttoken.py  0009_alter_handle_url.py
tests/umd_handle/: handle_validation_tests.py
tests/umd_handle/api/: handle_api_tests.py
