[project]
name = "umd-handle-django"
description = "UMD Handle Service (Django implementation)"
version = "1.0.0-dev"
dependencies = [
    "django~=5.0",
]

[project.optional-dependencies]
test = [
    "pytest~=8.4",
    "pytest-django~=4.11",
    "ruff~=0.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "umd_handle.settings"

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"
exclude = ["manage.py"]
